Fix crash when saving a file with text into PSD

BUG:455988